 
 Bug fixes:

   - my_isettings_free_string_list(), ofa_settings_free_string_list(): be NULL-tolerant.
   - my_utils_uri_get_lines(): get rid of all empty lines at end of file.
   - ofaPreferences: plugins no more prevent the dialog closing.
   - ofaStreamFormatBin: if has string delimiter, then it must not be empty.

 Other changes:

   - my_utils_window_position_get_has_pos(): new function.
   - ofa_hub_disconnect_handlers: improve and generalize use (todo #1055).
   - ofaIDBProvider: all methods get an instance argument (todo #1065).
   - ofaIExeCloseClose interface is renamed to ofaIExeClose (todo #1067).
   - ofaIPrefsProvider, ofaIPrefsPage: deprecated interfaces.
   - ofaIProperties: new interface which obsoletes both ofaIPrefsProvider and ofaIPrefsPage.
   - ofsBat: deprecated data structure.

-----------------------------------------------------------------------
 Version 0.53
 ============

 Released on 2016-04-07
  
 New features and improvements:

   - DDL Core v 29
   - DDL VAT v 5
   - Import a default accounts chart on dossier creation (todo #1051).
   - Export a dynamic list of exportable objects (todo #519).
   - Import a dynamic list of importable objects (todo #520).
   - VATForm: make it exportable (todo #940).
   - VATForm: make it importable (todo #939).
   - Import assistant ask for user confirmation before emptying a table (todo #1059).
   - ImporterCSV: new general CSV plugin.
   - ImporterPdfBourso: new plugin which replace (obsoleted) ImportBoursoPdf one.
   - ImporterPdfLcl: new plugin which replace (obsoleted) ImportLCLPdf one.
   - ImporterTxtBourso: new plugin which replace (obsoleted) ImportBourso one.
   - ImporterTxtLcl: new plugin which replace (obsoleted) ImportLcl one.
   - Specialized importers may provide their own format (todo #1062).
   - BAT file import format is reviewed to be compatible with export format (todo #1068).

 Bug fixes:

   - Remove underlines of detached page titles.

 Other changes:
